<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:background="#000000" >
    <LinearLayout
      android:id="@+id/centrerView"
	  android:orientation="vertical"
	  android:layout_width="0dip" 
	  android:layout_height="fill_parent"
	  android:layout_weight="60"
	  android:paddingLeft="15dp"
	  android:paddingTop="15dp"
	  android:paddingRight="15dp"
	  android:paddingBottom="15dp"
	  android:background="#000000" >
		<TextView 
		    android:id="@+id/headerView"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:paddingLeft="10dp"
	    	android:background="#FFFFFF"
	    	android:textColor="#000000"
	    	android:textSize="18sp"
	    	android:text="@string/header" />
		<TextView 
		    android:id="@+id/characterView"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:gravity="center"
	    	android:background="#FFFFFF"
	    	android:textColor="#000000"
	    	android:textSize="140sp" />
		<TextView 
		    android:id="@+id/debug"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="10dp"
	    	android:paddingLeft="10dp"
	    	android:background="#FFFFFF"
	    	android:textColor="#000000"
	    	android:text="@string/debug" />
		<TextView 
		    android:id="@+id/timer"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:paddingLeft="10dp"
	    	android:background="#FFFFFF"
	    	android:textColor="#000000" />
		<TextView 
		    android:id="@+id/times"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:paddingLeft="10dp"
	    	android:background="#FFFFFF"
	    	android:textColor="#000000" />
		<TextView 
		    android:id="@+id/sensor"
		    android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="3dp"
	    	android:paddingLeft="10dp"
	    	android:background="#FFFFFF"
	    	android:textColor="#000000"
	    	android:text="@string/sensor" />
		<LinearLayout 
		    android:id="@+id/buttons"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" >
			<Button 
			    android:id="@+id/b_form"
			    android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:text="@string/b_form"
		    	android:onClick="openForm" />
			<Button 
			    android:id="@+id/b_show"
			    android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:text="@string/b_show"
		    	android:onClick="showMenu" />
			<Button 
			    android:id="@+id/b_hide"
			    android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:text="@string/b_hide"
		    	android:onClick="hideMenu" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>

